assets/css/main.css
*, *:before, *:after {
    box-sizing: border-box;
}

:root {
    --blue: #07498b;
    --black: #293133;
    --black: #111010;
    --grey: #767676;
    /* --grey: #5c5c5c; */
    --light-grey: #949494;
    --lighter-grey: #d8d8d8;
    --sepia:  #faf3e3;

    --googleFont: '{{ .Site.Params.googleFont -}}';

    --content-font-size: 1.8em;
    --content-line-height: 1.8em;

}

html {
    font-size: 62.5%;
    background-color: var(--sepia);
}

body#wrapper {
    display: grid;
    grid-template-columns: 
        1fr
        min(65ch, 100%)
        1fr;
    font-size: var(--content-font-size);
    font-family: var(--googleFont), 'Arial', sans-serif;
    line-height: 1.6em;
    margin: 8px;
}

body#wrapper > * {
    grid-column: 2;
}

body#wrapper > .fullBleed {
    width: 100%;
    grid-column: 1 / -1;
 }

header#banner {
    margin: 25px 0;
}

header#banner {
    margin: 25px 0;
}

header#banner a {
    text-decoration: none;
}

header#banner a:hover {
    text-decoration: underline;
}

header#banner h2 {
    display: inline;
    font-size: 21px;
    font-size: 2.1rem;
    margin: 0 8px 0 0;
}

header#banner h2 a {
    color: var(--blue); /* Rahul Prabhakar dark blue color */
}

header#banner nav {
    display: inline-block;
    float: right;    
}

header#banner nav ul {
    list-style-type: none;
    font-size: 1.05em;
    text-transform: lowercase;
    margin: 0;
    padding: 0;
}

header#banner nav ul li {
    display: inline;
    margin: 0 3px;
}

header#banner nav ul li a {
    color: var(--blue); /* Nav menu colors */
}

main#content a {
    color: var(--blue);
    text-decoration: none;
}

main#content a:hover {
    text-decoration: underline;
}

main#content h1,
main#content h2,
main#content h3,
main#content h4,
main#content h5,
main#content h6 {
    margin-bottom: 0;
    line-height: 1.15;
}

main#content h3 {
    font-size: 19px;
    font-size: 1.9rem;
}

main#content h1 + p,
main#content h2 + p,
main#content h3 + p,
main#content h4 + p,
main#content h5 + p,
main#content h6 + p {
    margin-top: 5px;
}

main#content p { /* page text content */
    color: var(--black);
    margin: 16px 0;
    line-height: var(--content-line-height);
    word-break: break-word;
}

main#content hr { /* page end divider */
    height: 1px;
    border: 0;
    background: var(--lighter-grey);
}

/* index.html styles */
main#content ul#posts {
    list-style-type: none;
    font-size: 2rem;
    margin-top: 0;
    padding: 0;
}

main#content ul#posts li {
    margin: 5px 0;
    padding: 0;
}

main#content ul#posts small {
    font-size: 0.8em;
    color: #767676;
    margin-left: 10px;
}

main#content ul#posts li a {
    text-decoration: none;
}

main#content ul#posts li a:hover {
    text-decoration: underline;
}

main#content ul#posts li a:hover small {
    color: inherit;
}

/* single.html styles */
main#content header#post-header h1 {
    display: block;
    color: var(--black); /* Article header color */ 
    font-size: 23px;
    font-size: 2.3rem;
    line-height: 1.15;
}

/* main#content header#post-header time {
    display: block;
    font-size: 0.85em;
    color: var(--black);
} */

main#content #toc {
    border: 1px solid #b1b1b1;
    border-radius: 1px;
    line-height: 26px;
    margin: 16px 0;
    padding: 9px 14px;
}

main#content #toc h4 {
    font-size: 1.06em;
    color: #3d3d3d;
    margin: 0;
}

main#content #toc nav#TableOfContents {
    margin-top: 4px;
}

main#content #toc nav#TableOfContents > ul, main#content #toc nav#TableOfContents > ol {
    margin-left: -40px;
}

main#content #toc ul, main#content #toc ol {
    font-size: 0.98em;
    margin: 0;
    padding: 0 0 0 40px;
}

main#content #toc ul {
    list-style-type: none;
}

main#content #toc ol {
    counter-reset: item;
}

main#content #toc ol li {
    display: block;
}

main#content #toc ol li:before {
    content: counters(item, ".") ". ";
    counter-increment: item;
}

main#content img {
    max-width: 100%;
    margin: 0 auto;
}

main#content figure {
    margin: 16px 0;
}

main#content figure img {
    display: block;
    max-width: 100%;
    margin: 0 auto;
}

main#content figure figcaption {
    font-size: 0.92em;
    font-style: italic;
    line-height: 22px;
    text-align: center;
    margin-top: 6px;
    padding: 0 10px;
}

main#content figure figcaption h4 {
    font-style: normal;
    display: inline;
    margin: 0;
}

main#content figure figcaption p {
    display: inline;
    margin: 0;
    padding-left: 8px;
}

main#content code,
main#content pre {
    font-family: 'Menlo', monospace;
}

main#content code {
    font-size: 0.96em;
    padding: 0 5px;
}

main#content pre {
    display: block;
    overflow-x: auto;
    font-size: 14px;
    font-size: 1.4rem;
    white-space: pre;
    margin: 20px 0;
    padding: 1.5rem 1.5rem;
    line-height: 1.4;
}

main#content pre code {
    padding: 0;
}

main#content section.footnotes {
    font-size: 0.9em;
}

footer#footer {
    font-size: 14px;
    font-size: 1.4rem;
    font-weight: 300;
    color: var(--light-grey);
    margin: 40px 0;
}

